@@ -501,6 +501,12 @@ class SmartyPantsHTMLTranslator(HTMLTranslator):
         finally:
             self.no_smarty -= 1
 
+    def visit_literal_block(self, node):
+        self.no_smarty += 1
+
+    def depart_literal_block(self, node):
+        self.no_smarty -= 1
+
     def visit_literal_emphasis(self, node):
         self.no_smarty += 1
         self.visit_emphasis(node)
